fix: updated strings to be more specific

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -4,6 +4,6 @@ mod_desc_MODULAR_CANNON=An upgradable cannon, that uses a complex loading mechan
 mod_MODULAR_KINETIC1=Modular Upgrade: Kinetic I
 mod_MODULAR_KINETIC2=Modular Upgrade: Kinetic II
 mod_MODULAR_KINETIC3=Modular Upgrade: Kinetic III
-mod_desc_MODULAR_KINETIC1=Increases projectile velocity and damage of Modular Cannon.
-mod_desc_MODULAR_KINETIC2=Increases projectile velocity and damage of Modular Cannon.
-mod_desc_MODULAR_KINETIC3=Increases projectile velocity and damage of Modular Cannon.
+mod_desc_MODULAR_KINETIC1=Increases projectile velocity and piercing damage of Modular Cannon.
+mod_desc_MODULAR_KINETIC2=Increases projectile velocity and piercing damage of Modular Cannon.
+mod_desc_MODULAR_KINETIC3=Increases projectile velocity and piercing damage of Modular Cannon.
