feat: added explosive upgrade

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -7,3 +7,10 @@ mod_MODULAR_KINETIC3=Modular Upgrade: Kinetic III
 mod_desc_MODULAR_KINETIC1=Increases projectile velocity and piercing damage (+20) of Modular Cannon.
 mod_desc_MODULAR_KINETIC2=Increases projectile velocity and piercing damage (+20) of Modular Cannon.
 mod_desc_MODULAR_KINETIC3=Increases projectile velocity and piercing damage (+20) of Modular Cannon.
+
+mod_MODULAR_EXPLOSIVE1=Modular Upgrade: Explosive I
+mod_MODULAR_EXPLOSIVE2=Modular Upgrade: Explosive II
+mod_MODULAR_EXPLOSIVE3=Modular Upgrade: Explosive III
+mod_desc_MODULAR_EXPLOSIVE1=Adds an explosive payload to Modular Cannon.
+mod_desc_MODULAR_EXPLOSIVE2=Increases splash distance and blast damage (+15) of Modular Cannon.
+mod_desc_MODULAR_EXPLOSIVE3=Increases splash distance and blast damage (+15) of Modular Cannon.
