feat: added speed upgrade

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -14,3 +14,10 @@ mod_MODULAR_EXPLOSIVE3=Modular Upgrade: Explosive III
 mod_desc_MODULAR_EXPLOSIVE1=Adds an explosive payload to Modular Cannon.
 mod_desc_MODULAR_EXPLOSIVE2=Increases splash distance and blast damage (+15) of Modular Cannon.
 mod_desc_MODULAR_EXPLOSIVE3=Increases splash distance and blast damage (+15) of Modular Cannon.
+
+mod_MODULAR_SPEED1=Modular Upgrade: Speed I
+mod_MODULAR_SPEED2=Modular Upgrade: Speed II
+mod_MODULAR_SPEED3=Modular Upgrade: Speed III
+mod_desc_MODULAR_SPEED1=Increases fire rate (-0.5s) of Modular Cannon.
+mod_desc_MODULAR_SPEED2=Increases fire rate (-0.5s) of Modular Cannon.
+mod_desc_MODULAR_SPEED3=Increases fire rate (-0.5s) of Modular Cannon.
