feat: added aerodynamic upgrade

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -21,3 +21,10 @@ mod_MODULAR_SPEED3=Modular Upgrade: Speed III
 mod_desc_MODULAR_SPEED1=Increases fire rate (-0.5s) of Modular Cannon.
 mod_desc_MODULAR_SPEED2=Increases fire rate (-0.5s) of Modular Cannon.
 mod_desc_MODULAR_SPEED3=Increases fire rate (-0.5s) of Modular Cannon.
+
+mod_MODULAR_AERO1=Modular Upgrade: Aerodynamic I
+mod_MODULAR_AERO2=Modular Upgrade: Aerodynamic II
+mod_MODULAR_AERO3=Modular Upgrade: Aerodynamic III
+mod_desc_MODULAR_AERO1=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
+mod_desc_MODULAR_AERO2=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
+mod_desc_MODULAR_AERO3=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
