feat: added ammo upgrade

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -28,3 +28,10 @@ mod_MODULAR_AERO3=Modular Upgrade: Aerodynamic III
 mod_desc_MODULAR_AERO1=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
 mod_desc_MODULAR_AERO2=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
 mod_desc_MODULAR_AERO3=Increases accuracy (+20%) and projectile velocity of Modular Cannon.
+
+mod_MODULAR_AMMO1=Modular Upgrade: Ammo I
+mod_MODULAR_AMMO2=Modular Upgrade: Ammo II
+mod_MODULAR_AMMO3=Modular Upgrade: Ammo III
+mod_desc_MODULAR_AMMO1=Decreases ammo needed per shot.
+mod_desc_MODULAR_AMMO2=Decreases ammo needed per shot.
+mod_desc_MODULAR_AMMO3=Decreases ammo needed per shot.
