feat: added heavy kit

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -35,3 +35,6 @@ mod_MODULAR_AMMO3=Modular Upgrade: Ammo III
 mod_desc_MODULAR_AMMO1=Decreases ammo needed per shot.
 mod_desc_MODULAR_AMMO2=Decreases ammo needed per shot.
 mod_desc_MODULAR_AMMO3=Decreases ammo needed per shot.
+
+mod_MODULAR_CANNON_HEAVY=Modular Cannon (Heavy Kit)
+mod_desc_MODULAR_CANNON_HEAVY=A variant of the Modular Cannon, that compresses multiple shells together into a single, massive shell. Sacrifices fire rate, ammo consumption, and projectile velocity, for much greater damage.
