feat: added tech strings

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -1,6 +1,9 @@
 mod_MODULAR_CANNON=Modular Cannon
 mod_desc_MODULAR_CANNON=An upgradable cannon, that uses a complex loading mechanism to manufacture and load custom shells.
 
+mod_MODULAR_CANNON_HEAVY=Modular Cannon (Heavy Kit)
+mod_desc_MODULAR_CANNON_HEAVY=A variant of the Modular Cannon, that compresses multiple shells together into a single, massive shell. Sacrifices fire rate, ammo consumption, and projectile velocity, for much greater damage.
+
 mod_MODULAR_KINETIC1=Modular Upgrade: Kinetic I
 mod_MODULAR_KINETIC2=Modular Upgrade: Kinetic II
 mod_MODULAR_KINETIC3=Modular Upgrade: Kinetic III
@@ -36,5 +39,5 @@ mod_desc_MODULAR_AMMO1=Decreases ammo needed per shot.
 mod_desc_MODULAR_AMMO2=Decreases ammo needed per shot.
 mod_desc_MODULAR_AMMO3=Decreases ammo needed per shot.
 
-mod_MODULAR_CANNON_HEAVY=Modular Cannon (Heavy Kit)
-mod_desc_MODULAR_CANNON_HEAVY=A variant of the Modular Cannon, that compresses multiple shells together into a single, massive shell. Sacrifices fire rate, ammo consumption, and projectile velocity, for much greater damage.
+tech_MODULAR_CANNON=Modular Cannon
+bonus_MODULAR_CANNON=Modular cannon
