feat: added light kit

--- a/strings/en.properties
+++ b/strings/en.properties
@@ -2,7 +2,10 @@ mod_MODULAR_CANNON=Modular Cannon
 mod_desc_MODULAR_CANNON=An upgradable cannon, that uses a complex loading mechanism to manufacture and load custom shells.
 
 mod_MODULAR_CANNON_HEAVY=Modular Cannon (Heavy Kit)
-mod_desc_MODULAR_CANNON_HEAVY=A variant of the Modular Cannon, that compresses multiple shells together into a single, massive shell. Sacrifices fire rate, ammo consumption, and projectile velocity, for much greater damage.
+mod_desc_MODULAR_CANNON_HEAVY=A variant of the Modular Cannon, that compresses multiple shells together into a single, massive shell. Sacrifices fire rate, ammo consumption, and projectile velocity; for much greater damage.
+
+mod_MODULAR_CANNON_LIGHT=Modular Cannon (Light Kit)
+mod_desc_MODULAR_CANNON_LIGHT=A variant of the Modular Cannon, that produces smaller shells, increasing fire rate, projectile speed, and ammo efficiency; at the cost of damage.
 
 mod_MODULAR_KINETIC1=Modular Upgrade: Kinetic I
 mod_MODULAR_KINETIC2=Modular Upgrade: Kinetic II
